<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="Post_author_avatar">Post author avatar</string>
    <string name="Post_menu">Post menu</string>
    <string name="Number_of_likes">Number of likes</string>
    <string name="Number_of_shares">Number of shares</string>
    <string name="Number_of_views">Number of views</string>
    <string name="post_text">post text</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="Empty_error">Content can\'t be empty</string>
    <string name="cancel">Cancel</string>
    <string name="app_not_found">App not found</string>
    <string name="description_post_save">Post save</string>
    <string name="play_button">play button</string>
    <string name="video_name">video name</string>
    <string name="video_preview">video preview</string>
    <string name="chooser_share_post">chooser share post</string>
    <string name="channel_remote_name">Server notification</string>
    <string name="channel_remote_description">Notification from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_share">User %1$s shared %2$s\'s post</string>
    <string name="notification_user_new_post">User %1$s published new post :</string>
</resources>